apps/order-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: apps
spec:
  selector:
    app: order-service
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
